Integrated some loading animations and fixed z-index issue with filter div

--- a/components/Filter/_Filter.css
+++ b/components/Filter/_Filter.css
@@ -1,6 +1,9 @@
 .filter-container {
+    position: absolute;
+    z-index: 2;
     display: flex;
     flex-direction: column;
+    background: white;
     width: 320px;
     height: 286px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
